// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`contracts (privacy boundaries) > MintBatchRequest 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "label": {
      "maxLength": 120,
      "type": "string",
    },
    "size": {
      "exclusiveMinimum": 0,
      "maximum": 10000,
      "type": "integer",
    },
  },
  "required": [
    "size",
  ],
  "type": "object",
}
`;

exports[`contracts (privacy boundaries) > MintBatchResponse 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "batchId": {
      "format": "uuid",
      "type": "string",
    },
    "downloadUrl": {
      "type": "string",
    },
    "expiresAt": {
      "format": "date-time",
      "type": "string",
    },
    "size": {
      "exclusiveMinimum": 0,
      "type": "integer",
    },
  },
  "required": [
    "batchId",
    "size",
    "downloadUrl",
    "expiresAt",
  ],
  "type": "object",
}
`;

exports[`contracts (privacy boundaries) > PartnerBatchMintedV1 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "batchId": {
      "format": "uuid",
      "type": "string",
    },
    "label": {
      "type": [
        "string",
        "null",
      ],
    },
    "partnerId": {
      "format": "uuid",
      "type": "string",
    },
    "size": {
      "exclusiveMinimum": 0,
      "type": "integer",
    },
    "v": {
      "const": 1,
      "type": "number",
    },
  },
  "required": [
    "v",
    "batchId",
    "partnerId",
    "size",
    "label",
  ],
  "type": "object",
}
`;
